--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -4,7 +4,7 @@ Pkg.add(&quot;GraphPlot&quot;)</code></pre><p>Then bring <code>GraphPlot</code> 
 using DistributedFactorGraphs</code></pre><p>Any factor graph can then be drawn by calling <a href="../func_ref/#DistributedFactorGraphs.DFGPlots.plotDFG"><code>plotDFG</code></a>:</p><pre><code class="language-julia hljs"># Construct graph using IIF
 using IncrementalInference
 # Create graph
-dfg = LightDFG{SolverParams}(solverParams=SolverParams())
+dfg = GraphsDFG{SolverParams}(solverParams=SolverParams())
 v1 = addVariable!(dfg, :x0, ContinuousScalar, tags = [:POSE], solvable=1)
 v2 = addVariable!(dfg, :x1, ContinuousScalar, tags = [:POSE], solvable=1)
 v3 = addVariable!(dfg, :l0, ContinuousScalar, tags = [:LANDMARK], solvable=1)
@@ -24,94 +24,94 @@ plotDFG(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-1b05c27c">
+     id="img-3114faf7">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-1b05c27c-1">
-  <g transform="translate(94.04,50.86)">
-    <path fill="none" d="M1.05,-15.54 L-1.05,15.54 " class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-3114faf7-1">
+  <g transform="translate(51.66,80.33)">
+    <path fill="none" d="M4.02,-10.2 L-4.02,10.2 " class="primitive"/>
   </g>
-  <g transform="translate(69.18,30.13)">
-    <path fill="none" d="M20.62,0.99 L-20.62,-0.99 " class="primitive"/>
+  <g transform="translate(32.87,54.61)">
+    <path fill="none" d="M19.7,9.51 L-19.7,-9.51 " class="primitive"/>
   </g>
-  <g transform="translate(113.91,18.91)">
-    <path fill="none" d="M-14.52,9.76 L14.52,-9.76 " class="primitive"/>
+  <g transform="translate(89.22,57.67)">
+    <path fill="none" d="M-26.85,7.27 L26.85,-7.27 " class="primitive"/>
   </g>
-  <g transform="translate(36.9,87.19)">
-    <path fill="none" d="M17.4,3.42 L-17.4,-3.42 " class="primitive"/>
+  <g transform="translate(14.9,33.11)">
+    <path fill="none" d="M2.79,-10.16 L-2.79,10.16 " class="primitive"/>
   </g>
-  <g transform="translate(77.65,78.64)">
-    <path fill="none" d="M-14.09,10.21 L14.09,-10.21 " class="primitive"/>
+  <g transform="translate(51.29,13.38)">
+    <path fill="none" d="M-27.13,4.76 L27.13,-4.76 " class="primitive"/>
   </g>
-  <g transform="translate(15.1,68.45)">
-    <path fill="none" d="M-2.58,-13.82 L2.58,13.82 " class="primitive"/>
+  <g transform="translate(123.01,38.7)">
+    <path fill="none" d="M4.85,-10.16 L-4.85,10.16 " class="primitive"/>
   </g>
-  <g transform="translate(30.81,38.99)">
-    <path fill="none" d="M-14.83,9.15 L14.83,-9.15 " class="primitive"/>
+  <g transform="translate(103.08,15.99)">
+    <path fill="none" d="M21.52,7.15 L-21.52,-7.15 " class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-1b05c27c-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-3114faf7-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-1b05c27c-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-3114faf7-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-1b05c27c-4">
-  <g transform="translate(95.36,31.39)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-3114faf7-4">
+  <g transform="translate(57.17,66.34)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(59.67,91.67)" fill="#2E8B57">
+  <g transform="translate(18.76,19.09)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,50.72)" fill="#2E8B57">
+  <g transform="translate(129.64,24.82)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(17.9,83.44)" fill="#00CDCD">
+  <g transform="translate(47.19,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(92.9,67.58)" fill="#00CDCD">
+  <g transform="translate(11.79,44.43)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(46.89,29.06)" fill="#00CDCD">
+  <g transform="translate(117.63,49.98)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(129.64,8.33)" fill="#00CDCD">
+  <g transform="translate(80.05,8.33)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-1b05c27c-5">
-  <g transform="translate(95.36,31.39)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-3114faf7-5">
+  <g transform="translate(57.17,66.34)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(59.67,91.67)">
+  <g transform="translate(18.76,19.09)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(11.79,50.72)">
+  <g transform="translate(129.64,24.82)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(17.9,83.44)">
+  <g transform="translate(47.19,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(92.9,67.58)">
+  <g transform="translate(11.79,44.43)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(46.89,29.06)">
+  <g transform="translate(117.63,49.98)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(129.64,8.33)">
+  <g transform="translate(80.05,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -273,7 +273,7 @@ draw(SVG(&quot;graph.svg&quot;, 10cm, 10cm), plotDFG(dfg));</code></pre><p><img 
 # Construct graph using IIF
 using IncrementalInference
 # Create graph
-dfg = LightDFG{SolverParams}(solverParams=SolverParams())
+dfg = GraphsDFG{SolverParams}(solverParams=SolverParams())
 v1 = addVariable!(dfg, :x0, ContinuousScalar, tags = [:POSE], solvable=1)
 v2 = addVariable!(dfg, :x1, ContinuousScalar, tags = [:POSE], solvable=1)
 v3 = addVariable!(dfg, :l0, ContinuousScalar, tags = [:LANDMARK], solvable=1)
@@ -296,13 +296,13 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 [ Info: init with useinitfct [:l0x0f1]
 [ Info: do init of l0
 ┌ Warning: CommonConvWrapper.threadmodel is obsolete
-└ @ IncrementalInference ~/.julia/packages/IncrementalInference/GFPC8/src/Deprecated.jl:33
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/5hg25/src/Deprecated.jl:33
 ┌ Warning: CommonConvWrapper.threadmodel is obsolete
-└ @ IncrementalInference ~/.julia/packages/IncrementalInference/GFPC8/src/Deprecated.jl:33
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/5hg25/src/Deprecated.jl:33
 ┌ Warning: CommonConvWrapper.threadmodel is obsolete
-└ @ IncrementalInference ~/.julia/packages/IncrementalInference/GFPC8/src/Deprecated.jl:33
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/5hg25/src/Deprecated.jl:33
 ┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
 └ @ DistributedFactorGraphs ~/work/DistributedFactorGraphs.jl/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:659
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
-[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.23 on <span class="colophon-date" title="Thursday 5 January 2023 18:23">Thursday 5 January 2023</span>. Using Julia version 1.8.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Monday 30 January 2023 17:55">Monday 30 January 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
