--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Drawing Graphs · DistributedFactorGraphs.jl</title><script data-outdated-warner src="../assets/warner.js"></script><link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/juliamono/0.045/juliamono.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.13.24/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark" data-theme-primary-dark/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit"><a href="../">DistributedFactorGraphs.jl</a></span></div><form class="docs-search" action="../search/"><input class="docs-search-query" id="documenter-search-query" name="q" type="text" placeholder="Search docs"/></form><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li><span class="tocitem">Getting Started</span><ul><li><a class="tocitem" href="../DataStructure/">DFG Data Structures</a></li><li><a class="tocitem" href="../BuildingGraphs/">Building Graphs</a></li><li><a class="tocitem" href="../GraphData/">Using Graph Elements</a></li><li class="is-active"><a class="tocitem" href>Drawing Graphs</a><ul class="internal"><li><a class="tocitem" href="#GraphPlot"><span>GraphPlot</span></a></li><li><a class="tocitem" href="#Dot-Files"><span>Dot Files</span></a></li></ul></li><li><a class="tocitem" href="../ref_api/">Quick API Reference</a></li></ul></li><li><a class="tocitem" href="../func_ref/">Function Reference</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><nav class="breadcrumb"><ul class="is-hidden-mobile"><li><a class="is-disabled">Getting Started</a></li><li class="is-active"><a href>Drawing Graphs</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Drawing Graphs</a></li></ul></nav><div class="docs-right"><a class="docs-edit-link" href="https://github.com/JuliaRobotics/DistributedFactorGraphs.jl/blob/master/docs/src/DrawingGraphs.md" title="Edit on GitHub"><span class="docs-icon fab"></span><span class="docs-label is-hidden-touch">Edit on GitHub</span></a><a class="docs-settings-button fas fa-cog" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-sidebar-button fa fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a></div></header><article class="content" id="documenter-page"><h1 id="Drawing-Graphs"><a class="docs-heading-anchor" href="#Drawing-Graphs">Drawing Graphs</a><a id="Drawing-Graphs-1"></a><a class="docs-heading-anchor-permalink" href="#Drawing-Graphs" title="Permalink"></a></h1><p>Graphs can be visualized by using either <code>GraphPlot</code> or rendering to .dot files (which can be viewed using xdot).</p><h2 id="GraphPlot"><a class="docs-heading-anchor" href="#GraphPlot">GraphPlot</a><a id="GraphPlot-1"></a><a class="docs-heading-anchor-permalink" href="#GraphPlot" title="Permalink"></a></h2><p><code>GraphPlot</code> plotting is available if <code>GraphPlot</code> is imported before DFG is imported. Install <code>GraphPlot</code> using the following command:</p><pre><code class="language-julia hljs">using Pkg
 Pkg.add(&quot;GraphPlot&quot;)</code></pre><p>Then bring <code>GraphPlot</code> in before DFG:</p><pre><code class="language-julia hljs">using GraphPlot
-using DistributedFactorGraphs</code></pre><p>Any factor graph can then be drawn by calling <a href="../func_ref/#DistributedFactorGraphs.DFGPlots.plotDFG"><code>plotDFG</code></a>:</p><pre><code class="language-julia hljs"># Construct graph using IIF
+using DistributedFactorGraphs</code></pre><p>Any factor graph can then be drawn by calling <a href="@ref"><code>plotDFG</code></a>:</p><pre><code class="language-julia hljs"># Construct graph using IIF
 using IncrementalInference
 # Create graph
 dfg = GraphsDFG{SolverParams}(solverParams=SolverParams())
@@ -24,74 +24,74 @@ plotDFG(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-fea1c9c9">
+     id="img-385bd4eb">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-fea1c9c9-1">
-  <g transform="translate(26.09,80.46)">
-    <path fill="none" d="M13.19,-10.33 L-13.19,10.33 " class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-385bd4eb-1">
+  <g transform="translate(27.94,82.09)">
+    <path fill="none" d="M14.87,-8.82 L-14.87,8.82 " class="primitive"/>
   </g>
-  <g transform="translate(39.26,49.21)">
-    <path fill="none" d="M2.94,14.12 L-2.94,-14.12 " class="primitive"/>
+  <g transform="translate(52.65,49.4)">
+    <path fill="none" d="M-4.56,17.47 L4.56,-17.47 " class="primitive"/>
   </g>
-  <g transform="translate(71.7,65.03)">
-    <path fill="none" d="M-23.15,1.77 L23.15,-1.77 " class="primitive"/>
+  <g transform="translate(71.35,74.78)">
+    <path fill="none" d="M-18.85,-3.13 L18.85,3.13 " class="primitive"/>
   </g>
-  <g transform="translate(49.93,22.18)">
-    <path fill="none" d="M12.78,-10.83 L-12.78,10.83 " class="primitive"/>
+  <g transform="translate(73.47,20.48)">
+    <path fill="none" d="M14.72,-9.5 L-14.72,9.5 " class="primitive"/>
   </g>
-  <g transform="translate(92.21,9.43)">
-    <path fill="none" d="M-20.37,-0.86 L20.37,0.86 " class="primitive"/>
+  <g transform="translate(112.7,15.79)">
+    <path fill="none" d="M-15.45,-5.65 L15.45,5.65 " class="primitive"/>
   </g>
-  <g transform="translate(111.72,51.91)">
-    <path fill="none" d="M14.06,-10.36 L-14.06,10.36 " class="primitive"/>
+  <g transform="translate(108.61,69.1)">
+    <path fill="none" d="M15.46,-8.36 L-15.46,8.36 " class="primitive"/>
   </g>
-  <g transform="translate(121.24,23.25)">
-    <path fill="none" d="M6.4,11.79 L-6.4,-11.79 " class="primitive"/>
+  <g transform="translate(129.11,38.79)">
+    <path fill="none" d="M-0.49,15.63 L0.49,-15.63 " class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-fea1c9c9-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-385bd4eb-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-fea1c9c9-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-385bd4eb-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-fea1c9c9-4">
-  <g transform="translate(43.01,67.22)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-385bd4eb-4">
+  <g transform="translate(47.08,70.74)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(66.28,8.33)" fill="#2E8B57">
+  <g transform="translate(92.31,8.33)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(129.64,38.71)" fill="#2E8B57">
+  <g transform="translate(128.5,58.35)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
   <g transform="translate(11.79,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(36.07,33.92)" fill="#00CDCD">
+  <g transform="translate(57.51,30.77)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(96.51,63.13)" fill="#00CDCD">
+  <g transform="translate(91.82,78.18)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(114.24,10.35)" fill="#00CDCD">
+  <g transform="translate(129.64,21.98)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-fea1c9c9-5">
-  <g transform="translate(43.01,67.22)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-385bd4eb-5">
+  <g transform="translate(47.08,70.74)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(66.28,8.33)">
+  <g transform="translate(92.31,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(129.64,38.71)">
+  <g transform="translate(128.5,58.35)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
@@ -101,17 +101,17 @@ plotDFG(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(36.07,33.92)">
+  <g transform="translate(57.51,30.77)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(96.51,63.13)">
+  <g transform="translate(91.82,78.18)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(114.24,10.35)">
+  <g transform="translate(129.64,21.98)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -289,14 +289,14 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 [ Info: init with useinitfct [:x0f1]
 [ Info: do init of x0
 ┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
-└ @ DistributedFactorGraphs ~/work/DistributedFactorGraphs.jl/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:667
+└ @ DistributedFactorGraphs ~/work/DistributedFactorGraphs.jl/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:669
 [ Info: try doautoinit! of x1
 [ Info: try doautoinit! of l0
 [ Info: try doautoinit! of l0
 [ Info: init with useinitfct [:l0x0f1]
 [ Info: do init of l0
 ┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
-└ @ DistributedFactorGraphs ~/work/DistributedFactorGraphs.jl/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:667
+└ @ DistributedFactorGraphs ~/work/DistributedFactorGraphs.jl/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:669
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
-[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Sunday 16 April 2023 15:05">Sunday 16 April 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 10 August 2023 05:59">Thursday 10 August 2023</span>. Using Julia version 1.9.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
