--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -18,100 +18,116 @@ plotDFG(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
 <svg xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
      version="1.2"
-     width="141.42mm" height="100mm" viewBox="0 0 141.42 100"
+     width="100mm" height="100mm" viewBox="0 0 100 100"
      stroke="none"
      fill="#000000"
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-b06b7285">
+     id="img-78c7a935">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-b06b7285-1">
-  <g transform="translate(82.88,19.87)">
-    <path fill="none" d="M-2.47,10.37 L2.47,-10.37 " class="primitive"/>
-  </g>
-  <g transform="translate(48.21,43.08)">
-    <path fill="none" d="M26.11,-7.47 L-26.11,7.47 " class="primitive"/>
-  </g>
-  <g transform="translate(106.26,44.85)">
-    <path fill="none" d="M-21.92,-8.78 L21.92,8.78 " class="primitive"/>
-  </g>
-  <g transform="translate(16.62,62.49)">
-    <path fill="none" d="M-3.53,10.35 L3.53,-10.35 " class="primitive"/>
-  </g>
-  <g transform="translate(40.61,84.67)">
-    <path fill="none" d="M-23.64,-6.56 L23.64,6.56 " class="primitive"/>
-  </g>
-  <g transform="translate(128.08,65.76)">
-    <path fill="none" d="M-1.4,10.37 L1.4,-10.37 " class="primitive"/>
-  </g>
-  <g transform="translate(94.09,86.22)">
-    <path fill="none" d="M26.68,-5.14 L-26.68,5.14 " class="primitive"/>
+<g fill="#000000" fill-opacity="0.000" id="img-78c7a935-1">
+  <g transform="translate(50,50)">
+    <path d="M-50,-50 L50,-50 50,50 -50,50  z" class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-b06b7285-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-78c7a935-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-b06b7285-3">
-</g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-b06b7285-4">
-  <g transform="translate(79.49,34.13)" fill="#2E8B57">
-    <circle cx="0" cy="0" r="5.35" class="primitive"/>
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-78c7a935-3">
+  <g transform="translate(18.15,80.15)">
+    <path fill="none" d="M7.18,-10.54 L-7.18,10.54 " class="primitive"/>
   </g>
-  <g transform="translate(11.79,76.67)" fill="#2E8B57">
-    <circle cx="0" cy="0" r="5.35" class="primitive"/>
+  <g transform="translate(51.34,60.27)">
+    <path fill="none" d="M-19.97,5.12 L19.97,-5.12 " class="primitive"/>
   </g>
-  <g transform="translate(126.14,80.05)" fill="#2E8B57">
-    <circle cx="0" cy="0" r="5.35" class="primitive"/>
+  <g transform="translate(17.13,52.15)">
+    <path fill="none" d="M8.09,11.03 L-8.09,-11.03 " class="primitive"/>
   </g>
-  <g transform="translate(85.63,8.33)" fill="#00CDCD">
-    <circle cx="0" cy="0" r="1.6" class="primitive"/>
+  <g transform="translate(81.23,43.26)">
+    <path fill="none" d="M8.06,-10.65 L-8.06,10.65 " class="primitive"/>
   </g>
-  <g transform="translate(20.55,50.99)" fill="#00CDCD">
-    <circle cx="0" cy="0" r="1.6" class="primitive"/>
+  <g transform="translate(78.34,18)">
+    <path fill="none" d="M10.35,8.9 L-10.35,-8.9 " class="primitive"/>
   </g>
-  <g transform="translate(129.64,54.21)" fill="#00CDCD">
-    <circle cx="0" cy="0" r="1.6" class="primitive"/>
+  <g transform="translate(15.57,28.27)">
+    <path fill="none" d="M6.62,-10.89 L-6.62,10.89 " class="primitive"/>
   </g>
-  <g transform="translate(65.8,91.67)" fill="#00CDCD">
-    <circle cx="0" cy="0" r="1.6" class="primitive"/>
+  <g transform="translate(47.03,11)">
+    <path fill="none" d="M-18.89,2.51 L18.89,-2.51 " class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-b06b7285-5">
-  <g transform="translate(79.49,34.13)">
+<g fill="#D3D3D3" id="img-78c7a935-4">
+</g>
+<g fill="#D3D3D3" id="img-78c7a935-5">
+</g>
+<g font-size="4" fill="#000000" id="img-78c7a935-6">
+</g>
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-78c7a935-7">
+  <g transform="translate(27.55,66.36)" fill="#2E8B57">
+    <circle cx="0" cy="0" r="3.78" class="primitive"/>
+  </g>
+  <g transform="translate(91.67,29.47)" fill="#2E8B57">
+    <circle cx="0" cy="0" r="3.78" class="primitive"/>
+  </g>
+  <g transform="translate(24.24,14.02)" fill="#2E8B57">
+    <circle cx="0" cy="0" r="3.78" class="primitive"/>
+  </g>
+  <g transform="translate(10.31,91.67)" fill="#00CDCD">
+    <circle cx="0" cy="0" r="1.13" class="primitive"/>
+  </g>
+  <g transform="translate(72.45,54.86)" fill="#00CDCD">
+    <circle cx="0" cy="0" r="1.13" class="primitive"/>
+  </g>
+  <g transform="translate(8.33,40.17)" fill="#00CDCD">
+    <circle cx="0" cy="0" r="1.13" class="primitive"/>
+  </g>
+  <g transform="translate(67.09,8.33)" fill="#00CDCD">
+    <circle cx="0" cy="0" r="1.13" class="primitive"/>
+  </g>
+</g>
+<g font-family="Helvetica" font-size="4" fill="#000000" id="img-78c7a935-8">
+  <g transform="translate(27.55,66.36)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(11.79,76.67)">
+  <g transform="translate(91.67,29.47)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(126.14,80.05)">
+  <g transform="translate(24.24,14.02)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(85.63,8.33)">
+  <g transform="translate(10.31,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(20.55,50.99)">
+  <g transform="translate(72.45,54.86)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(129.64,54.21)">
+  <g transform="translate(8.33,40.17)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(65.8,91.67)">
+  <g transform="translate(67.09,8.33)">
+    <g class="primitive">
+      <text text-anchor="middle" dy="0.35em"></text>
+    </g>
+  </g>
+</g>
+<g font-family="Helvetica" font-size="4" fill="#000000" id="img-78c7a935-9">
+  <g transform="translate(50,0)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -299,4 +315,4 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 └ @ DistributedFactorGraphs ~/work/DistributedFactorGraphs.jl/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:781
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
-[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Wednesday 14 August 2024 14:47">Wednesday 14 August 2024</span>. Using Julia version 1.10.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Friday 13 September 2024 11:00">Friday 13 September 2024</span>. Using Julia version 1.10.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
